--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./server/server.js",
-    "auto":"nodemon ./server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "auto": "nodemon ./server/server.js",
+    "test": "mocha server/**/*.test.js",
+    "test-watch":"nodemon  --exec \"npm test\""
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "expect": "^24.9.0",
+    "mocha": "^6.2.2"
   }
 }
